--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,9 @@ build/Release
 
 # Dependency directories
 node_modules/
+node_modules
 jspm_packages/
+dist
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
